--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   align-items: center;
   justify-content: center;
   align-content: center;
+  padding: 10px 180px 0px 180px;
 }
 
 .head-1 {
@@ -104,7 +105,7 @@ button {
 
 .section2 {
   background-color: thistle;
-  padding: 10px 180px 150px 180px;
+  padding: 10px 180px 0px 180px;
   text-align: center;
   color: #555;
 }
@@ -135,6 +136,7 @@ h3 {
   align-items: center;
   text-align: center;
   gap: 20px;
+  /* padding-bottom: 0px; */
 }
 
 .img-div p {
@@ -142,4 +144,19 @@ h3 {
   align-items: center;
   height: 200px;
   width: 200px;
+}
+
+.testimonial {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 180px 0px 180px;
+}
+
+.testimonial-text {
+  font-size: 30px;
+  color: #333;
+  font-style: italic;
+  text-align: justify;
 }
